--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
 <body>
 
 <header>
-    <h1>Petition to End Welcome to Country</h1>
+    <h1>Petition to Reduce Canteen Prices</h1>
 </header>
 
 <div class="container">
 
     <div class="counter-box">
-        <div class="goal">Goal: <span id="goal">10,000</span> Signatures</div>
+        <div class="goal">Goal: <span id="goal">200</span> Signatures</div>
         <div class="count" id="count">0</div>
     </div>
 
     <h2>Sign the Petition</h2>
 
     <input type="text" id="name" placeholder="Full Name" required>
-    <input type="text" id="address" placeholder="Address" required>
+    <input type="text" id="address" placeholder="Most Overpeiced Item" required>
     <input type="email" id="email" placeholder="Email" required>
 
     <button onclick="submitForm()">Sign Petition</button>
@@ -148,3 +148,4 @@
 
 </body>
 </html>
+
