--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Petition – End Welcome to Country</title>
+<title>Reduce CCGS Canteen Prices</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     body {
@@ -148,4 +148,5 @@
 
 </body>
 </html>
+
 
